2014-09-19 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/_divsint_stm8.s:
	* device/lib/stm8/_mulint_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of div / mul.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.

2014-09-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed double read from __sfr function parameter.

2014-09-17 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/pic14-header-parser.pl:
	  Creates two new groups: "regular", "enhanced"

	* support/scripts/pic16fam-h-gen.pl:
	  Divides into more groups the 14-bit processors:
		"adc", "ccp", "pwm", "i2c", "spi", "usart"

2014-09-17 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl:
	  updated

2014-09-15 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic14/*.inc,
	  device/non-free/lib/pic14/libdev/*.c:
	  updated

2014-09-13 Ben Shi <powerstudio1st AT 163.com>
	* src/stm8/main.c:
	  Make libstm8.lib is implicitly linked rather than explicitly designated.

2014-09-04 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/mcs51-disasm.pl,
	  support/scripts/optimize_pic16devices.pl:
	  Updated unto the Perl 5.16 version.

2014-09-04 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/cinc2h.pl:
	  Updated unto the Perl 5.16 version.

2014-09-03 Ben Shi <powerstudio1st AT 163.com>
	* sdas/asstm8/stm8mch.c:
	  Fix the wrong code of the bit index in BTJF / BTJF.

2014-09-01 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/include/pic14/pic14devices.txt: Minor bugfix.

2014-08-30 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-pr28982a.c:
	* support/regression/tests/bug3475630.c:
	  Enabled on the stm8 port.

2014-08-29 Ben Shi <powerstudio1st AT 163.com>
	* support/regression/tests/gcc-torture-execute-pr47337.c:
	  Enable this test case on the stm8 port.
